--- a/index.html
+++ b/index.html
@@ -134,12 +134,14 @@
                 </div>
             </div>
 
-            <!-- 안내사항 이미지 -->
-            <div class="row mt-5">
-                <div class="col-12 text-center">
-                    <img src="images/info-care.png" alt="세담홈케어 안내사항" class="img-fluid rounded shadow info-img">
-                </div>
-            </div>
+<!-- 안내사항 이미지 -->
+<div class="row mt-5">
+    <div class="col-12 text-center">
+        <img src="images/info-care.png"
+             alt="세담홈케어 안내사항"
+             class="img-fluid rounded shadow info-main-img">
+    </div>
+</div>
         </div>
     </section>
 
@@ -660,3 +662,4 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
