--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <div class="col-12 text-center">
         <img src="images/info-care.png"
              alt="세담홈케어 안내사항"
-             class="img-fluid rounded shadow info-main-img">
+             class="info-main-img">
     </div>
 </div>
         </div>
@@ -662,4 +662,5 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
 
