--- a/index.html
+++ b/index.html
@@ -134,14 +134,12 @@
                 </div>
             </div>
 
-<!-- 안내사항 이미지 -->
-<div class="row mt-5">
-    <div class="col-12 text-center">
-        <img src="images/info-care.png"
-             alt="세담홈케어 안내사항"
-             class="info-main-img">
-    </div>
-</div>
+            <!-- 안내사항 이미지 -->
+            <div class="row mt-5">
+                <div class="col-12 text-center">
+                    <img src="images/info-care.png" alt="세담홈케어 안내사항" class="img-fluid rounded shadow info-img">
+                </div>
+            </div>
         </div>
     </section>
 
@@ -662,5 +660,3 @@
     <script src="js/script.js"></script>
 </body>
 </html>
-
-
