--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                             <p class="mb-2">
                                 <i class="fas fa-map-marker-alt me-2"></i>
                                 <strong>주소:</strong> 인천광역시 서구 가정로 451, 1동 1123호<br>
-                                <span class="ms-4 ps-2">(가정동, 밸러미센텀시티)</span>
+                                <span class="ms-4 ps-2">(가정동, 벨라미센텀시티)</span>
                             </p>
                             <p class="mb-2">
                                 <i class="fas fa-phone me-2"></i>
@@ -611,7 +611,7 @@
                     <p class="small" style="color: rgba(255, 255, 255, 0.8) !important;">
                         사업자등록번호: 101-24-51695<br>
                         주소: 인천광역시 서구 가정로 451, 1동 1123호<br>
-                        (가정동, 밸러미센텀시티)
+                        (가정동, 벨라미센텀시티)
                     </p>
                 </div>
                 <div class="col-lg-3 mb-4 mb-lg-0">
@@ -660,3 +660,4 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
