--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <!-- 하단 버튼 -->
         <div class="hero-bottom-buttons">
             <a href="#reservation" class="btn btn-primary hero-btn-blue">예약하기</a>
-            <a href="https://pf.kakao.com" target="_blank" class="btn btn-warning hero-btn-yellow">
+            <a href="http://pf.kakao.com/_qUgkn" target="_blank" class="btn btn-warning hero-btn-yellow">
                 카카오 상담
             </a>
         </div>
@@ -660,4 +660,5 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
 
