--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
                                     </div>
                                     <h4 class="fw-bold mb-3">온라인 예약</h4>
                                     <p class="text-muted mb-3">24시간 언제든지 예약 신청</p>
-                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLScRfsMCgpQ_C0Pw_A9faVLZghRCNRCfo4O1sNukZlPO3U/viewform" target="_blank" class="btn btn-primary btn-lg">
+                                    <a href="https://docs.google.com/forms/d/1RfsMCgpQ_C0Pw_A9faVLZghRCNRCfo4O1sNukZlPO3U/edit?pli=1" target="_blank" class="btn btn-primary btn-lg">
                                         <i class="fas fa-edit me-2"></i>예약 폼 작성하기
                                     </a>
                                     <p class="small text-muted mt-2">새 창에서 열립니다</p>
@@ -660,5 +660,6 @@
     <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
