--- a/index.html
+++ b/index.html
@@ -30,39 +30,105 @@
         <i class="fas fa-phone"></i>
     </a>
 
-    <!-- 네비게이션 바 -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top shadow-sm">
-        <div class="container">
-            <a class="navbar-brand" href="#home">
-                <span class="nav-brand-text">세담홈케어</span>
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item">
-                        <a class="nav-link active" href="#home">홈</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#about">소개</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#services">서비스</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#advantages">장점</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#portfolio">작업보기</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-reservation" href="#reservation">예약하기</a>
-                    </li>
-                </ul>
-            </div>
+<!-- 네비게이션 바 -->
+<nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top shadow-sm">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">
+            <span class="nav-brand-text">세담홈케어</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html">홈</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="homeCleaningDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        홈클리닝
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="homeCleaningDropdown">
+                        <li><a class="dropdown-item" href="home-cleaning/move-in.html">입주청소</a></li>
+                        <li><a class="dropdown-item" href="home-cleaning/moving.html">이사청소</a></li>
+                        <li><a class="dropdown-item" href="home-cleaning/completion.html">준공청소</a></li>
+                        <li><a class="dropdown-item" href="home-cleaning/grout.html">줄눈시공</a></li>
+                        <li><a class="dropdown-item" href="home-cleaning/elastic.html">탄성코트</a></li>
+                        <li><a class="dropdown-item" href="home-cleaning/culvee.html">컬비청소</a></li>
+                        <li><a class="dropdown-item" href="home-cleaning/nano.html">나노코팅</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="businessCleaningDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        사업장클리닝
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="businessCleaningDropdown">
+                        <li><a class="dropdown-item" href="business-cleaning/commercial.html">상가청소</a></li>
+                        <li><a class="dropdown-item" href="business-cleaning/special.html">특수청소</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html#advantages">장점</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html#portfolio">작업보기</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-reservation" href="index.html#reservation">예약하기</a>
+                </li>
+            </ul>
         </div>
-    </nav>
+    </div>
+</nav><!-- 네비게이션 바 -->
+<nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top shadow-sm">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">
+            <span class="nav-brand-text">세담홈케어</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link active" href="index.html">홈</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="homeCleaningDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        홈클리닝
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="homeCleaningDropdown">
+                        <li><a class="dropdown-item" href="home-cleaning/move-in.html">입주청소</a></li>
+                        <li><a class="dropdown-item" href="home-cleaning/moving.html">이사청소</a></li>
+                        <li><a class="dropdown-item" href="home-cleaning/completion.html">준공청소</a></li>
+                        <li><a class="dropdown-item" href="home-cleaning/grout.html">줄눈시공</a></li>
+                        <li><a class="dropdown-item" href="home-cleaning/elastic.html">탄성코트</a></li>
+                        <li><a class="dropdown-item" href="home-cleaning/culvee.html">컬비청소</a></li>
+                        <li><a class="dropdown-item" href="home-cleaning/nano.html">나노코팅</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="businessCleaningDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        사업장클리닝
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="businessCleaningDropdown">
+                        <li><a class="dropdown-item" href="business-cleaning/commercial.html">상가청소</a></li>
+                        <li><a class="dropdown-item" href="business-cleaning/special.html">특수청소</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html#advantages">장점</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html#portfolio">작업보기</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-reservation" href="index.html#reservation">예약하기</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
 <!-- 메인 히어로 섹션 -->
 <section id="home" class="hero-full">
@@ -112,54 +178,6 @@
     </div>
 </section>
 
-    <!-- 회사 소개 섹션 -->
-    <section id="about" class="about-section py-5">
-        <div class="container">
-            <div class="text-center mb-5">
-                <h2 class="section-title fw-bold text-dark">세담홈케어를 소개합니다</h2>
-                <div class="title-underline"></div>
-            </div>
-            
-            <div class="row align-items-center mb-5">
-                <div class="col-lg-6 mb-4 mb-lg-0 text-center">
-                    <img src="images/about-detail.png" alt="세담홈케어 소개" class="img-fluid rounded shadow about-img">
-                </div>
-                <div class="col-lg-6">
-                    <div class="about-content">
-                        <h3 class="fw-bold mb-4 text-dark">새로운 공간의 시작,<br>입주의 시작은 세담에서</h3>
-                        <p class="lead mb-4 text-dark">
-                            세심함을 담아 진심으로 청소하는<br>
-                            <strong>세담홈케어</strong>
-                        </p>
-                        
-                        <div class="highlight-box p-4 bg-white bg-opacity-90 rounded mb-4">
-                            <h5 class="text-dark mb-3">프리미엄 홈케어 전문 청소 서비스</h5>
-                            <p class="mb-3 text-dark">세심함을 담아 진심으로 청소하는 프리미엄 청소업체.</p>
-                            <ul class="list-unstyled text-dark">
-                                <li class="mb-2">✓ 합리적인 청소 비용 및 결제 방법</li>
-                                <li class="mb-2">✓ 모든 순간 체계적인 청소 시스템</li>
-                            </ul>
-                            <p class="text-dark small mb-0">
-                                입주청소부터 빌딩, 상가 등 다양한 곳<br>
-                                어디든 깨끗하게 청소하는 <strong>세담홈케어!</strong>
-                            </p>
-                        </div>
-
-                        <div class="company-info text-dark">
-                            <p class="mb-2">
-                                <i class="fas fa-map-marker-alt me-2"></i>
-                                <strong>주소:</strong> 인천광역시 서구 가정로 451, 1동 1123호<br>
-                                <span class="ms-4 ps-2">(가정동, 벨라미센텀시티)</span>
-                            </p>
-                            <p class="mb-2">
-                                <i class="fas fa-phone me-2"></i>
-                                <strong>전화:</strong> <a href="tel:010-5729-5122" class="text-dark text-decoration-none">010-5729-5122</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
             <!-- 안내사항 이미지 -->
             <div class="row mt-5">
                 <div class="col-12 text-center">
@@ -168,214 +186,6 @@
             </div>
         </div>
     </section>
-
-<!-- 서비스 섹션 -->
-<section id="services" class="services-section py-5">
-    <div class="container">
-        <div class="text-center mb-5">
-            <!-- 이모지 제거 & 신뢰감 있게 정리 -->
-            <h2 class="section-title fw-bold text-dark">프리미엄 청소 서비스</h2>
-            <div class="title-underline"></div>
-            <p class="text-dark mt-3">다양한 전문 청소 서비스를 제공합니다</p>
-        </div>
-
-        <!-- 프리미엄 서비스 소개 이미지 -->
-        <div class="row mb-5 justify-content-center">
-            <div class="col-lg-5 col-md-6 mb-4 text-center">
-                <img src="images/premium-service.png" alt="프리미엄 청소상담" class="img-fluid rounded shadow service-img">
-            </div>
-            <div class="col-lg-5 col-md-6 mb-4 text-center">
-                <img src="images/service-premium.png" alt="프리미엄 세담홈케어" class="img-fluid rounded shadow service-img">
-            </div>
-        </div>
-
-        <!-- 서비스 카드들 -->
-        <div class="row g-4">
-            <!-- 입주청소 -->
-            <div class="col-lg-4 col-md-6">
-                <div class="service-card">
-                    <div class="service-icon">
-                        <i class="fas fa-home"></i>
-                    </div>
-                    <h4 class="fw-bold mb-3 text-dark">입주청소</h4>
-                    <p class="text-dark">
-                        새 집의 구석구석을 꼼꼼하게 청소해 드립니다. 
-                        건축 잔해물과 먼지를 친환경 제품으로 깨끗하게 제거하여 
-                        건강한 새 집에서의 시작을 도와드립니다.
-                    </p>
-                </div>
-            </div>
-
-            <!-- 이사청소 -->
-            <div class="col-lg-4 col-md-6">
-                <div class="service-card">
-                    <div class="service-icon">
-                        <i class="fas fa-truck-moving"></i>
-                    </div>
-                    <h4 class="fw-bold mb-3 text-dark">이사청소</h4>
-                    <p class="text-dark">
-                        이사 전후 꼼꼼한 청소로 깨끗한 환경을 만들어 드립니다. 
-                        친환경 세제로 찌든 때와 먼지를 말끔히 제거하여 
-                        상쾌한 공간에서 새 출발하세요.
-                    </p>
-                </div>
-            </div>
-
-            <!-- 준공청소 -->
-            <div class="col-lg-4 col-md-6">
-                <div class="service-card">
-                    <div class="service-icon">
-                        <i class="fas fa-building"></i>
-                    </div>
-                    <h4 class="fw-bold mb-3 text-dark">준공청소</h4>
-                    <p class="text-dark">
-                        신축 건물의 준공 후 발생하는 건축 먼지와 오염을 
-                        전문적으로 제거합니다. 완벽한 마무리로 
-                        건물의 가치를 높여드립니다.
-                    </p>
-                </div>
-            </div>
-
-            <!-- 줄눈시공 -->
-            <div class="col-lg-4 col-md-6">
-                <div class="service-card">
-                    <div class="service-icon">
-                        <i class="fas fa-th"></i>
-                    </div>
-                    <h4 class="fw-bold mb-3 text-dark">줄눈시공</h4>
-                    <p class="text-dark">
-                        타일 줄눈의 곰팡이와 오염을 제거하고 
-                        새롭게 시공합니다. 욕실과 주방을 
-                        위생적이고 깨끗하게 만들어드립니다.
-                    </p>
-                </div>
-            </div>
-
-            <!-- 탄성코트 -->
-            <div class="col-lg-4 col-md-6">
-                <div class="service-card">
-                    <div class="service-icon">
-                        <i class="fas fa-paint-roller"></i>
-                    </div>
-                    <h4 class="fw-bold mb-3 text-dark">탄성코트</h4>
-                    <p class="text-dark">
-                        베란다와 발코니 바닥에 탄성코트를 시공하여 
-                        방수 및 내구성을 향상시킵니다. 
-                        깔끔하고 오래가는 마감을 제공합니다.
-                    </p>
-                </div>
-            </div>
-
-            <!-- 컬비청소 -->
-            <div class="col-lg-4 col-md-6">
-                <div class="service-card">
-                    <div class="service-icon">
-                        <i class="fas fa-broom"></i>
-                    </div>
-                    <h4 class="fw-bold mb-3 text-dark">컬비청소</h4>
-                    <p class="text-dark">
-                        현관 컬비(디딤판) 청소 전문 서비스입니다. 
-                        완고한 오염과 얼룩을 깨끗하게 제거하여 
-                        새것처럼 만들어드립니다.
-                    </p>
-                </div>
-            </div>
-
-            <!-- 상가청소 -->
-            <div class="col-lg-4 col-md-6">
-                <div class="service-card">
-                    <div class="service-icon">
-                        <i class="fas fa-store"></i>
-                    </div>
-                    <h4 class="fw-bold mb-3 text-dark">상가청소</h4>
-                    <p class="text-dark">
-                        깨끗한 상가 환경으로 고객에게 좋은 인상을 남기세요. 
-                        구석구석 꼼꼼하게 청소하여 위생적이고 쾌적한 
-                        쇼핑 환경을 조성합니다.
-                    </p>
-                </div>
-            </div>
-
-            <!-- 특수청소 -->
-            <div class="col-lg-4 col-md-6">
-                <div class="service-card">
-                    <div class="service-icon">
-                        <i class="fas fa-tools"></i>
-                    </div>
-                    <h4 class="fw-bold mb-3 text-dark">특수청소</h4>
-                    <p class="text-dark">
-                        일반 청소로 해결되지 않는 특별한 상황도 걱정 마세요. 
-                        전문 장비와 노하우를 갖춘 청소팀이 
-                        어려운 청소 문제도 완벽하게 해결해 드립니다.
-                    </p>
-                </div>
-            </div>
-
-            <!-- 나노코팅 -->
-            <div class="col-lg-4 col-md-6">
-                <div class="service-card">
-                    <div class="service-icon">
-                        <i class="fas fa-shield-alt"></i>
-                    </div>
-                    <h4 class="fw-bold mb-3 text-dark">나노코팅</h4>
-                    <p class="text-dark">
-                        첨단 나노 기술로 표면을 코팅하여 
-                        오염 방지 및 항균 효과를 제공합니다. 
-                        청소가 쉬워지고 위생적인 환경을 유지합니다.
-                    </p>
-                </div>
-            </div>
-        </div>
-
-<!-- 세담홈케어 서비스 섹션 -->
-<div class="service-adv-wrapper text-center mt-5">
-
-    <!-- 타이틀 -->
-    <h2 class="service-adv-title">세담홈케어의 서비스</h2>
-    <div class="service-adv-underline"></div>
-
-    <!-- 설명 문구 -->
-    <p class="service-adv-subtitle">
-        세담홈케어만의 전문성을 바탕으로, 더 깨끗한 환경을 만들어드립니다.
-    </p>
-
-    <!-- 이미지 2개 -->
-    <div class="row justify-content-center mt-4">
-        <div class="col-lg-5 col-md-6 mb-4">
-            <img src="images/service-nano.png" 
-                 alt="세담홈케어 나노코팅 서비스" 
-                 class="img-fluid rounded shadow service-detail-img">
-        </div>
-
-        <div class="col-lg-5 col-md-6 mb-4">
-            <img src="images/service-combo.png" 
-                 alt="세담홈케어 프리미엄 서비스" 
-                 class="img-fluid rounded shadow service-detail-img">
-        </div>
-    </div>
-
-</div>
-        <!-- 🔥 기존 service-call 이미지는 완전히 제거됨 -->
-
-        <!-- 서비스 강조 배너 -->
-        <div class="service-banner mt-5">
-            <div class="row align-items-center">
-                <div class="col-lg-8">
-                    <h3 class="fw-bold mb-2 text-dark">프리미엄 청소 서비스 전문</h3>
-                    <p class="mb-0 text-dark">
-                        입주청소 • 이사청소 • 준공청소 • 줄눈시공 • 탄성코트 • 컬비청소 • 상가청소 • 특수청소 • 나노코팅
-                    </p>
-                </div>
-                <div class="col-lg-4 text-lg-end mt-3 mt-lg-0">
-                    <a href="#reservation" class="btn btn-primary btn-lg">
-                        <i class="fas fa-calendar-check me-2"></i>예약 상담하기
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
-
 
     <!-- 장점 섹션 -->
     <section id="advantages" class="advantages-section py-5">
