--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
        aria-label="세담홈케어 네이버 블로그로 이동">
       <!-- TODO: 실제 이미지 경로로 교체 -->
       <img class="work-banner"
-           src="./assets/img/work-banner.png"
+           src="./assets/img/work-banner.PNG"
            alt="세담홈케어 작업내용 배너" />
     </a>
 
@@ -781,4 +781,5 @@
 
   <script src="./assets/js/main.js"></script>
 </body>
+
 </html>
